# fluvel

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  build-flatpak.sh  build_target_for_perf.txt  build_target_with_asan.txt  download.html  fluvel.json  generate_icons.sh  index.html  latest.json  ofeli.json  update_tr
src/app/: CMakeLists.txt  about_window.cpp  about_window.hpp  application_settings.cpp  application_settings.hpp  camera_graphics_view.cpp  camera_graphics_view.hpp  camera_overlay_widget.cpp  camera_overlay_widget.hpp  camera_window.cpp  camera_window.hpp  common_settings.hpp  contour_rendering.cpp  doc.hpp  evaluation_widget.cpp  evaluation_widget.hpp  evaluation_window.cpp  evaluation_window.hpp  frame_clock.hpp  frame_stats.cpp  frame_stats.hpp  image_adapters.hpp  image_pipeline_controller.hpp  image_view_base.cpp  image_view_base.hpp  language_window.cpp  language_window.hpp  main.cpp  main_window.cpp  main_window.hpp  pixmap_widget.hpp  resources.qrc  runtime_settings.hpp  scroll_area_widget.cpp  scroll_area_widget.hpp  settings_window.cpp  settings_window.hpp  video_active_contour_thread.cpp  video_active_contour_thread.hpp  windows_tools.cpp  (+1 more)
src/app/core/: active_contour_worker.cpp  active_contour_worker.hpp  algo_stats.hpp  application_settings.cpp  application_settings.hpp  application_settings_types.hpp  camera_controller.cpp  camera_controller.hpp  camera_format_utils.hpp  camera_stats.hpp  captured_frame.hpp  common_settings.hpp  contour_rendering.cpp  contour_rendering.hpp  device_id_utils.hpp  file_utils.cpp  file_utils.hpp  frame_clock.cpp  frame_clock.hpp  frame_data.hpp  frame_pipeline.hpp  image_adapters.hpp  image_controller.cpp  image_controller.hpp  image_debug.cpp  image_debug.hpp  image_settings_controller.cpp  image_settings_controller.hpp  phi_editor.cpp  phi_editor.hpp  preview_pipeline.cpp  preview_pipeline.hpp  qcolor_utils.cpp  qcolor_utils.hpp  qimage_utils.cpp  qimage_utils.hpp  runtime_settings.hpp  shape_overlay_renderer.cpp  shape_overlay_renderer.hpp  shape_type.hpp  (+6 more)
src/app/interop/: color_adapters.hpp  contour_adapters.hpp  frame_adapters.cpp  frame_adapters.hpp  image_adapters.hpp
src/app/qml/: Main.qml
src/app/ui/components/: algo_info_overlay.cpp  algo_info_overlay.hpp  algo_settings_widget.cpp  algo_settings_widget.hpp  analysis_widget.cpp  analysis_widget.hpp  autofit_behavior.cpp  autofit_behavior.hpp  camera_overlay_widget.cpp  camera_overlay_widget.hpp  color_picker_behavior.cpp  color_picker_behavior.hpp  color_selector_widget.cpp  color_selector_widget.hpp  contour_point_item.cpp  contour_point_item.hpp  contour_rendering_qimage.cpp  contour_rendering_qimage.hpp  display_settings_widget.cpp  display_settings_widget.hpp  drag_drop_behavior.cpp  drag_drop_behavior.hpp  evaluation_widget.hpp  frame_stats_collector.cpp  frame_stats_collector.hpp  frame_stats_view.cpp  frame_stats_view.hpp  fullscreen_behavior.cpp  fullscreen_behavior.hpp  icon_loader.cpp  icon_loader.hpp  image_view.cpp  image_view.hpp  image_view_base.hpp  image_view_interaction.hpp  image_view_listener.hpp  image_viewer_behavior.hpp  image_viewer_interaction.hpp  image_viewer_listener.hpp  image_viewer_widget.cpp  (+34 more)
src/bindings/python/: CMakeLists.txt  active_contour_py.cpp  active_contour_py.hpp  filtering_py.cpp  filtering_py.hpp  hausdorff_py.cpp  hausdorff_py.hpp  module.cpp  morpho_py.cpp  morpho_py.hpp  noise_py.cpp  noise_py.hpp  py_validation.cpp  py_validation.hpp
src/image_processing/: CMakeLists.txt  active_contour.cpp  active_contour.hpp  boundary_builder.cpp  boundary_builder.hpp  contour_data.cpp  contour_data.hpp  edge_ac.cpp  edge_ac.hpp  filters.hpp  hausdorff_distance.cpp  hausdorff_distance.hpp  image_views.hpp  list_i.cpp  list_i.hpp  math.hpp  point.hpp  region_ac.cpp  region_ac.hpp  region_color_ac.cpp  region_color_ac.hpp  shape.cpp  shape.hpp
src/image_processing/algo/: ac_types.hpp  active_contour.cpp  active_contour.hpp  active_contour_types.hpp  anisotropic_diffusion.cpp  anisotropic_diffusion.hpp  boundary_builder.cpp  boundary_builder.hpp  contour_data.cpp  contour_data.hpp  contour_diagnostics.hpp  contour_types.hpp  edge_ac.cpp  edge_ac.hpp  filters.cpp  filters.hpp  filters2.cpp  filters2.hpp  hausdorff_distance.cpp  hausdorff_distance.hpp  image_pipeline.cpp  image_pipeline.hpp  majority_internal_speed.cpp  majority_internal_speed.hpp  mean_filter.cpp  mean_filter.hpp  mean_filter_3x3.cpp  mean_filter_3x3.hpp  mean_filter_sliding.cpp  mean_sliding.cpp  mean_sliding.hpp  median_filter.cpp  median_filter.hpp  morpho.cpp  morpho.hpp  naive_morpho.hpp  noise.cpp  noise.hpp  pixel_wise.cpp  pixel_wise.hpp  (+20 more)
src/image_processing/analysis/: hausdorff_distance.cpp  hausdorff_distance.hpp  shape.cpp  shape.hpp  shape_conversion.cpp  shape_conversion.hpp
src/image_processing/core/: boundary_builder.cpp  boundary_builder.hpp  color.hpp  elapsed_timer.hpp  fluvel_math.hpp  grid2d.hpp  image_alpha.cpp  image_alpha.hpp  image_conversions.hpp  image_format.hpp  image_owner.hpp  image_span.hpp  image_view.hpp  matrix.hpp  matrix.txx  neighborhood.hpp  ofeli_math.hpp  point.hpp  point_containers.hpp  point_hash.hpp  shape.cpp  shape.hpp
src/image_processing/filtering/: anisotropic_diffusion.cpp  anisotropic_diffusion.hpp  image_pipeline.cpp  image_pipeline.hpp  mean_filter.hpp  mean_filter_3x3.cpp  mean_filter_3x3.hpp  mean_filter_sliding.cpp  mean_filter_sliding.hpp  median_filter.cpp  median_filter.hpp  morpho.cpp  morpho.hpp  naive_morpho.hpp  noise.cpp  noise.hpp  pixel_wise.cpp  pixel_wise.hpp  temporal_mean.cpp  temporal_mean.hpp  van_herk_morpho.hpp
src/image_processing/segmentation/: active_contour.cpp  active_contour.hpp  active_contour_types.hpp  boundary_builder.cpp  boundary_builder.hpp  boundary_factory.cpp  boundary_factory.hpp  contour_data.cpp  contour_data.hpp  contour_diagnostics.hpp  contour_types.hpp  majority_internal_speed.hpp  region_color_speed_model.cpp  region_color_speed_model.hpp  region_gray_speed_model.cpp  speed_model.hpp  speed_model_types.hpp
(+142 files in other folders)
